--- a/meetings/2023june.md
+++ b/meetings/2023june.md
@@ -1,7 +1,18 @@
 ---
 layout: page
-title: June 8th
-subtitle: Kickoff meeting
+title: Kickoff meeting
+subtitle: June 8th, 2023
 ---
 
 test
+
+
+## Planning
+
+| When | Description |
+---
+|9.00am - 9.30am| |
+|9.30am - 10.30am| |
+|10.30am - 10.45am| |
+|10.45am - 12.00pm| |
+| 12.00pm - 2pm | lunch |
