--- a/meetings/2023june.md
+++ b/meetings/2023june.md
@@ -12,9 +12,9 @@ test
 | When | Description |
 | --- | --- |
 |9.00am - 9.30am| Intro |
-|9.30am - 10.15am| SIRIG (computational) & state of the art|
-|10.15am - 10.30am | Break |
-|10.30am - 11am| SIRIG (experimental) + descussion|
-|11am - 12.00pm| Flora |
+|9.30am - 10.30am| SIRIG (computational) & state of the art|
+|10.30am - 10.45am | Break |
+|10.45am - 11.15am| SIRIG (experimental) + discussion|
+|11.15am - 12.00pm| Flora |
 | 12.00pm - 2pm | lunch |
 | 2pm - 4pm | Symbionts + discussion |
