--- a/meetings/2023june.md
+++ b/meetings/2023june.md
@@ -11,10 +11,10 @@ test
 
 | When | Description |
 | --- | --- |
-|9.00am - 9.30am| Intro |
+|9.00am - 9.30am| Intro + introduction of everyone |
 |9.30am - 10.30am| SIRIG (computational) & state of the art|
 |10.30am - 10.45am | Break |
 |10.45am - 11.15am| SIRIG (experimental) + discussion|
-|11.15am - 12.00pm| Flora |
+|11.15am - 12.00pm| Flora (IS insertion sites & IRs|
 | 12.00pm - 2pm | lunch |
 | 2pm - 4pm | Symbionts + discussion |
