--- a/meetings/2023june.md
+++ b/meetings/2023june.md
@@ -16,3 +16,7 @@ subtitle: June 8th, 2023
 |11.15am - 12.00pm| Flora (IS insertion sites & IRs|
 | 12.00pm - 2pm | lunch |
 | 2pm - 4pm | Symbionts + discussion |
+
+
+Evening restaurant: Le gout des autres
+Lunch restaurant: La brasciol
