replaced la brasciol with l'absolu

--- a/meetings/2023june.md
+++ b/meetings/2023june.md
@@ -13,10 +13,10 @@ subtitle: June 8th, 2023
 |9.30am - 10.30am| SIRIG (computational) & state of the art|
 |10.30am - 10.45am | Break |
 |10.45am - 11.15am| SIRIG (experimental) + discussion|
-|11.15am - 12.00pm| Flora (IS insertion sites & IRs|
+|11.15am - 12.00pm| Flora (IS insertion sites & IRs)|
 | 12.00pm - 2pm | lunch |
 | 2pm - 4pm | Symbionts + discussion |
 
 
 Evening restaurant: Le gout des autres
-Lunch restaurant: La brasciol
+Lunch restaurant: l'absolu, booked for 12.15
